<resources>
    <string name="app_name">Travelex</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="title_edit">Edit</string>
    <string name="title_settings">Settings</string>
    <string name="title_places_menu">Places</string>
    <string name="title_user_places_list">Your places</string>
    <string name="title_all_places_list">All places</string>
    <string name="title_place_create">Add place</string>
    <string name="title_places_map">Places map</string>
    <string name="title_settings_menu">Settings</string>
    <string name="title_settings_notifications">Notifications</string>
    <string name="title_settings_profile">Profile</string>
    <string name="title_account_menu">Account</string>
    <string name="title_logout">Logout</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="send_an_e_mail_with_password_reminder">Send an e-mail with password reminder</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="save_changes">Save changes</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="background">background</string>
    <string name="user_edit_username_image">user edit username image</string>
    <string name="add_photo">add photo</string>
    <string name="add_place">add place</string>
    <string name="rating">rating</string>
    <string name="place_name">Place name</string>
    <string name="place_description">Place description</string>
    <string name="comment">Comment</string>
    <string name="location">Location</string>
    <string name="map">map</string>
    <string name="description">Description</string>
    <string name="localization">Localization</string>
    <string name="image">image</string>
    <string name="recovery_email_sent_success">Wiadomość wyłana pomyślnie, sprawdź skrzynkę pocztową!</string>
    <string name="recovery_email_sent_failure">Wystąpił błąd, spróbuj ponownie</string>
    <string name="invalid_data">Invalid data</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="error">Error, please try again!</string>
</resources>