<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_places_menu_title"
            android:title="@string/title_places_menu" >
            <menu>
                <item
                    android:id="@+id/nav_places_map"
                    android:icon="@drawable/ic_world"
                    android:title="@string/title_places_map" />
                <item
                    android:id="@+id/nav_place_create"
                    android:icon="@drawable/ic_add"
                    android:title="@string/title_place_create" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_settings_menu_title"
            android:title="@string/title_settings_menu" >
            <menu>
                <item
                    android:id="@+id/nav_settings_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/title_settings_profile" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_account_menu_title"
            android:title="@string/title_account_menu" >
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_power"
                    android:title="@string/title_logout" />
            </menu>
        </item>


    </group>
</menu>
