<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_settings_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_settings_profile" />
    <item
        android:id="@+id/nav_places_map"
        android:icon="@drawable/ic_world"
        android:title="@string/title_places_map" />
    <item
        android:id="@+id/nav_all_places_list"
        android:icon="@drawable/ic_all_places"
        android:title="@string/title_all_places_list" />
    <item
        android:id="@+id/nav_user_places_list"
        android:icon="@drawable/ic_my_places"
        android:title="@string/title_user_places_list" />
    <item
        android:id="@+id/nav_place_create"
        android:icon="@drawable/ic_add"
        android:title="@string/title_place_create" />
</menu>
