<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xxlarge">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxlarge"
        android:layout_marginEnd="@dimen/spacing_xxlarge"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorAccentDark" />

    <TextView
        android:id="@+id/login_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/welcome_back"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/blue_grey_800"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/sign_in_to_continue"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue_grey_300"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_welcome_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/blue_grey_800"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/blue_grey_300"
        app:layout_constraintBottom_toTopOf="@id/login_password_label" />

    <TextView
        android:id="@+id/login_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/blue_grey_800"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_password"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/blue_grey_300"
        app:layout_constraintBottom_toTopOf="@id/forgot_password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:onClick="navigateRemindPassword"
        android:text="@string/forgot_password"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue_grey_400"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@color/colorAccentDark"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@color/grey_50"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/new_user_label" />

    <TextView
        android:id="@+id/new_user_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/new_user"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue_grey_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:onClick="navigateRegister"
        android:text="@string/sign_up"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorAccentDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_user_label" />

</androidx.constraintlayout.widget.ConstraintLayout>