<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xxlarge">

    <ImageView
        android:id="@+id/password_remind_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxlarge"
        android:layout_marginEnd="@dimen/spacing_xxlarge"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorAccentDark" />

    <TextView
        android:id="@+id/password_remind_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/enter_your_email_address"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue_grey_300"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_remind_logo" />

    <TextView
        android:id="@+id/password_remind_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/blue_grey_800"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_remind_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_remind_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/blue_grey_300"
        app:layout_constraintTop_toBottomOf="@id/password_remind_email_label" />

    <Button
        android:id="@+id/resend_password_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:background="@color/colorAccentDark"
        android:onClick="remindPassword"
        android:text="@string/send_an_e_mail_with_password_reminder"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
