<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/place_create_pager"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/place_create_pager_placeholder"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background" />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_margin="@dimen/spacing_mlarge"
            android:contentDescription="@string/rating"
            android:scaleType="centerCrop"
            android:src="@drawable/stars_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_create_pager_placeholder"
            app:tint="@color/grey_60" />

        <RatingBar
            android:id="@+id/place_create_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/yellow_800"
            android:secondaryProgressTint="@android:color/transparent"
            android:stepSize="0.1"
            app:layout_constraintBottom_toBottomOf="@id/imageButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageButton2"
            app:layout_constraintTop_toTopOf="@id/imageButton2" />

        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_margin="@dimen/spacing_mlarge"
            android:contentDescription="@string/place_name"
            android:scaleType="centerCrop"
            android:src="@drawable/label_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_create_rating"
            app:tint="@color/grey_60" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_create_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:textColorHint="@color/grey_40"
            app:layout_constraintBottom_toBottomOf="@id/imageButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageButton3"
            app:layout_constraintTop_toTopOf="@id/imageButton3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_create_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageButton4"
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_margin="@dimen/spacing_mlarge"
            android:contentDescription="@string/place_description"
            android:scaleType="centerCrop"
            android:src="@drawable/description_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/place_create_description_layout"
            app:layout_constraintBottom_toBottomOf="@id/place_create_description_layout"
            app:tint="@color/grey_60" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_create_description_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:textColorHint="@color/grey_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageButton4"
            app:layout_constraintTop_toBottomOf="@id/place_create_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_create_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_description"
                android:inputType="textMultiLine"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/place_create_photo_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_create_description_layout" />

        <ImageView
            android:id="@+id/imageButton5"
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_margin="@dimen/spacing_mlarge"
            android:contentDescription="@string/comment"
            android:scaleType="centerCrop"
            android:src="@drawable/speaker_notes_black"
            app:layout_constraintBottom_toBottomOf="@id/place_create_comment_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/place_create_comment_layout"
            app:tint="@color/grey_60" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_create_comment_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:textColorHint="@color/grey_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageButton5"
            app:layout_constraintTop_toBottomOf="@id/place_create_photo_grid">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_create_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"
                android:inputType="textMultiLine"
                android:minLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageButton6"
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_margin="@dimen/spacing_mlarge"
            android:contentDescription="@string/location"
            android:scaleType="centerCrop"
            android:src="@drawable/location_on_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/place_create_location_layout"
            app:layout_constraintBottom_toBottomOf="@id/place_create_location_layout"
            app:tint="@color/grey_60" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_create_location_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:textColorHint="@color/grey_40"
            app:layout_constraintTop_toBottomOf="@id/place_create_comment_layout"
            app:layout_constraintEnd_toStartOf="@id/place_create_map_button"
            app:layout_constraintStart_toEndOf="@id/imageButton6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_create_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/place_create_map_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/map"
            android:padding="@dimen/spacing_small"
            android:scaleType="centerCrop"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_world"
            android:tint="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="@id/imageButton6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageButton6" />

        <fragment
            android:id="@+id/place_create_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/spacing_medium"
            app:cameraZoom="17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_create_location_layout"
            app:liteMode="true"
            tools:context=".map.MapsFragment"
            tools:ignore="FragmentTagUsage" />

        <View
            android:id="@+id/back_drop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/overlay_dark_30"
            android:fitsSystemWindows="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/place_create_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:contentDescription="@string/add_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/add_a_photo_white"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorAccentDark"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@id/place_create_pager_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_create_pager_placeholder"
            app:rippleColor="@android:color/white"
            app:srcCompat="@drawable/ic_add" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/place_create_gallery_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/place_create_camera_container"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/place_create_gallery_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/place_create_fab_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_mlarge"
                android:contentDescription="@string/gallery"
                android:scaleType="centerCrop"
                android:tint="@color/grey_80"
                app:backgroundTint="@android:color/white"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/place_create_gallery_card"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@android:color/black"
                app:srcCompat="@drawable/collections_black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/place_create_camera_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/place_create_add_photo"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/place_create_camera_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/place_create_fab_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_mlarge"
                android:contentDescription="@string/camera"
                android:scaleType="centerCrop"
                android:tint="@color/grey_80"
                app:backgroundTint="@android:color/white"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/place_create_camera_card"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@android:color/black"
                app:srcCompat="@drawable/camera_alt_black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
